fix modal close and scrollbar

--- a/index.scss
+++ b/index.scss
@@ -131,6 +131,11 @@ head::after {
   }
 }
 
+body {
+  &.open {
+    overflow: hidden;
+  }
+}
 
 .card {
   width: 300px;
